# adventofcode

./: .drone.yml  .gitignore  README.md  pyproject.toml  renovate.json  requirements.txt  sync.py
.gitea/workflows/: test.yaml
2020/1/: README.md  report_repair_test.py  solve.py
2020/10/: README.md  adapter_array_tests.py  solve.py
2020/11/: README.md  seating_system_tests.py  solve.py
2020/12/: README.md  rain_risk_tests.py  solve.py
2020/13/: README.md  shuttle_search_tests.py  solve.py
2020/14/: README.md  docking_data_tests.py  solve.py
2020/15/: README.md  rambunctious_recitation_tests.py  solve.py
2020/16/: solve.py  ticket_translation_tests.py
2020/17/: conway_cubes_p1_tests.py  conway_cubes_p2_tests.py  solve1.py  solve2.py
2020/18/: README.md  operation_order_tests.py  solve.py
2020/19/: monster_messages_tests.py  solve.py
2020/2/: README.md  password_philosophy_test.py  solve.py
2020/20/: solve.py
2020/21/: solve.py
2020/22/: solve.py
2020/23/: README.md
2020/24/: README.md
2020/25/: README.md
2020/3/: README.md  solve.py  toboggan_trajectory_test.py
2020/4/: README.md  passport_processing_test.py  solve.py
2020/5/: README.md  binary_boarding_tests.py  check.py
2020/6/: README.md  check.py  custom_customs_tests.py
2020/7/: README.md  handy_haversacks_tests.py  solve.py
2020/8/: README.md  handheld_halting_tests.py  solve.py
2020/9/: README.md  encoding_error_tests.py  solve.py
2021/1/: check.py  sonar_sweep_test.py
2021/10/: solve.py  syntax_scoring_test.py
2021/11/: dumbo_octopus_test.py  solve.py
2021/12/: passage_pathing_test.py  solve.py
2021/13/: solve.py  transparent_origami_test.py
2021/14/: extended_polymerization_test.py  solve.py
2021/15/: chiton_test.py  solve.py
2021/16/: packet_decoder_test.py  solve.py
2021/17/: solve.py  trick_shot_test.py
2021/18/: snailfish_test.py  solve.py
2021/19/: beacon_scanner_test.py  solve.py
2021/2/: check.py  dive_test.py
2021/20/: solve.py  (+1 more)
2022/: README.md
2023/: README.md
2024/: README.md
aoclib/: __init__.py  _area.py  _parse.py
(+228 files in other folders)
