[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = "Jacek's Advent of code solution"
authors = ["Jacek <jacek@suchenia.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
beautifulsoup4 = "*"
requests = "*"
tqdm = "*"
cpmpy = "*"
numpy = "*"
sympy = "*"
pandas = "*"
pytest = "*"
setuptools = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
