[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = "Jacek's Advent of code solution"
authors = ["Jacek <jacek@suchenia.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
cpmpy = "*"
numpy = "*"
sympy = "*"
pandas = "*"
networkx = "*"

beautifulsoup4 = "*"
requests = "*"
tqdm = "*"
setuptools = "*"
ipython = "*"
black = "*"
isort = "*"
ruff = "*"

pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
console_output_style = "progress"

[tool.black]
line-length = 150
target-version = ['py311']

[tool.isort]
profile = "black"
src_paths = ["2023", "2022", "2021"]