[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = "Jacek's Advent of code solution"
authors = ["Jacek <jacek@suchenia.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

# Numeric libraries
cpmpy = "*"
numpy = "*"
sympy = "*"
pandas = "*"
networkx = "*"
shapely = "*"

[tool.poetry.group.sync.dependencies]
beautifulsoup4 = "*"
python-slugify = "*"
requests = "*"
setuptools = "*"

[tool.poetry.group.dev.dependencies]
tqdm = "*"
ipython = "*"
pytest = "*"
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
console_output_style = "progress"

[tool.black]
line-length = 150
target-version = ['py311']

[tool.isort]
profile = "black"
src_paths = ["2023", "2022", "2021"]